// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ApplyPage default 1`] = `
<div
  className="mn"
>
  <div
    className="b b-c"
  >
    <div
      className="sh"
    >
      <h2
        className="sh-title"
      >
        Applicant Information
      </h2>
    </div>
    <form
      onSubmit={[Function]}
    >
      <div
        className="g"
      >
        <div
          className="sel"
        >
          <label
            className="txt-l txt-l--sm"
            htmlFor="FeedbackForm-\${this.props.name}"
          >
            Prefix
             
          </label>
          <div
            className="sel-c sel-c--thin"
            style={
              Object {
                "marginRight": 14,
              }
            }
          >
            <select
              className="sel-f sel-f--thin"
            >
              <option>
                Mr
              </option>
              <option>
                Mrs
              </option>
              <option>
                Miss
              </option>
              <option>
                Mx
              </option>
            </select>
          </div>
        </div>
        <div
          className="g--3 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              First Name
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="First Name"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="g--1 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              Initial
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="middleName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Middle Initial"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="g--6 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              Last Name
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Last Name"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="g"
      >
        <div
          className="g--9 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              Street Address
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="StreetAddress"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Street Address"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="g--3 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              Unit
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="unit"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Unit or Apartment #"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="g"
      >
        <div
          className="g--7 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              City
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="City"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="g--2 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              State
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="state"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="State"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="g--3 m-b300"
        >
          <div
            className="txt m-b300"
          >
            <label
              className="txt-l txt-l--sm"
              htmlFor="FeedbackForm-\${this.props.name}"
            >
              Zip
            </label>
            <input
              className="txt-f txt-f--sm"
              id="FeedbackForm-\${this.props.name}"
              name="zip"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Zip Code"
              required={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Phone
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Phone Number"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Email
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Confirm Email
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Confirm Email"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <hr
        className="hr hr--sq"
      />
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Education and Experience
        </h2>
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Type of Degree
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="typeOfDegree"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Type of Degree"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Degree Attained
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="degreeAttained"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Degree Attained"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Educational Institution
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="educationalInstitution"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Educational Institution"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Other Information
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="otherInformation"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Other Information"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <hr
        className="hr hr--sq"
      />
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Boards and Commissions
        </h2>
      </div>
      <h2>
        Please note that many of these Boards and Commissions require City of Boston residency.
      </h2>
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Boards and Commissions without open positions
        </h2>
      </div>
      <ul>
        <div
          className="t--subinfo t--err m-t100"
        />
      </ul>
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Boards and Commissions with open positions
        </h2>
      </div>
      <ul>
        <h4>
          You can still apply for a board or commission that does not currently have any open positions, and we will review your application when a seat opens.
        </h4>
        <div
          className="t--subinfo t--err m-t100"
        />
      </ul>
      <hr
        className="hr hr--sq"
      />
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Reference Information
        </h2>
      </div>
      <hr
        className="hr hr--sq"
      />
      <div
        className="sh"
      >
        <h2
          className="sh-title"
        >
          Comments
        </h2>
      </div>
      <div
        className="txt"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        />
        <textarea
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="comments"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Other Comments"
          rows={10}
          value=""
        />
      </div>
      <button
        className="btn btn--700"
        type="submit"
      >
        Send Message
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<label
  className="cb"
>
  <input
    checked={true}
    className="cb-f"
    name="checkbox"
    onBlur=""
    onChange=""
    required={undefined}
    type="checkbox"
    value="checkbox"
  />
  <span
    className="cb-l"
  >
    Community Preservation Committee
  </span>
</label>
`;

exports[`Storyshots CommentInput default 1`] = `
<div
  className="txt"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  />
  <textarea
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="comments"
    onBlur=""
    onChange=""
    placeholder="Other Comments"
    rows={10}
    value="comments"
  />
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput error 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
    <span
      aria-hidden="true"
      className="t--req"
    >
       
      Required
    </span>
  </label>
  <input
    className="txt-f txt-f--sm txt-f--err"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={true}
    type="text"
    value=""
  />
  <div
    className="t--subinfo t--err m-t100"
  >
    Please Enter The Correct Zip Code, Zip Codes Contains 5 Digits.
  </div>
</div>
`;

exports[`Storyshots TextInput required 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
    <span
      aria-hidden="true"
      className="t--req"
    >
       
      Required
    </span>
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={true}
    type="text"
    value=""
  />
</div>
`;
